[tool.poetry]
name = "transformers-from-scratch"
version = "0.1.0"
description = ""
authors = ["goldblum <miadadrashid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
jupyterlab = "^4.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
